# ragin

./: DESIGN.md  README.md  V1-CORE-SPEC.md  V2-CORE-SPEC.md  V3-CORE-SPEC.md  idee.md  main.py  pyproject.toml  ragin_dev.db  todos.md
myproject/: main.py  settings.py
myproject/models/: __init__.py  user.py
src/ragin/: __init__.py
src/ragin/agent/: __init__.py  decorator.py  prompt.py  runner.py  tools.py
src/ragin/cli/: builder.py  dev_server.py  main.py  scaffold.py
src/ragin/conf/: __init__.py  settings.py
src/ragin/core/: app.py  fields.py  models.py  registry.py  requests.py  responses.py  routing.py
src/ragin/mcp/: __init__.py  server.py  tools.py
src/ragin/persistence/: __init__.py  base.py  schema.py  sql.py
src/ragin/providers/: __init__.py  anthropic.py  base.py  bedrock.py  openai.py
src/ragin/resource/: crud.py  decorator.py
src/ragin/runtime/: __init__.py  aws.py  azure.py  base.py  gcp.py  local.py
tests/: __init__.py  conftest.py  test_agent_decorator.py  test_agent_prompt.py  test_agent_runner.py  test_agent_tools.py  test_crud.py  test_mcp.py  test_models.py  test_providers.py  test_routing.py  test_settings.py
